--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "npm-run-all": "^4.1.5",
     "query-string": "^6.13.7",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
