--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-burger-menu": "^3.0.3",
     "react-dom": "^17.0.1",
     "react-hook-form": "^6.15.1",
+    "react-pin-field": "^1.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
